lots on minor changes, initial work on generic list view for administration

--- a/app/src/declaration/view/search.html
+++ b/app/src/declaration/view/search.html
@@ -113,7 +113,7 @@
     </div>
 </div>
 
- <md-card>
+ <!-- <md-card>
     <md-card-content>
     <md-table-container>
             <table md-table>
@@ -140,4 +140,4 @@
             </table>
         </md-table-container>
     </md-card-content>
-</md-card> 
+</md-card>  -->
