--- a/app/src/system_settings/lists/view/list.html
+++ b/app/src/system_settings/lists/view/list.html
@@ -5,13 +5,14 @@
                 <thead md-head>
                     <tr md-row>
                         <th md-column></th>
-                        <th md-column>Etnicitet</th>
+                        <th md-column>{{listTitle}}</th>
                     </tr>
                 </thead>
-                <tbody md-body ng-repeat="content in contents">
-                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="c in content">
-                        <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
-                        <td md-cell>{{c.name}}</td>
+                <tbody md-body>
+                    
+                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="content in listContent">
+                        <td md-cell><md-checkbox aria-label="Checkbox {{content.shortRef}}" ng-model="content.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
+                        <td md-cell>{{content.displayName}}</td>
                     </tr>
                 </tbody>
             </table>
