--- a/app/src/header/view/header.html
+++ b/app/src/header/view/header.html
@@ -5,7 +5,7 @@
     <od-user></od-user>
 
     <span class="md-toolbar-tools" flex>
-        <h2 ui-sref="declaration">Retspsykiatriske erklæringer</h2>
+        <h2 ui-sref="declaration" style="cursor:pointer">Retspsykiatriske erklæringer</h2>
     </span>
     <span class="md-toolbar-tools" layout="row">
         <ui-view name="toolbar-tools-left"></ui-view>
