--- a/app/src/declaration/view/patient-info-toolbar.html
+++ b/app/src/declaration/view/patient-info-toolbar.html
@@ -1,9 +1,11 @@
 <span ng-show="currentCase.locked4edit == 'true'">
 <md-icon>warning</md-icon> 
-<md-tooltip>Sagen redigeres i øjeblikket af en anden</md-tooltip>
+<md-tooltip>Sagen redigeres i øjeblikket af {{editor.displayName}}</md-tooltip>
 </span>
 
 {{currentCase.closed}}
+
+{{currentCase.locked4edit}}
 
 <span ng-if="!editMode">
     <md-button class="md-text-icon-button" aria-label="lås sagen" ng-click="lockCaseDialog()">
